--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -6,7 +6,7 @@
             <div class="col">
                 <h1 class="mt-5">Test microservices</h1>
                 <hr>
-                <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
+                <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test Broker</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
@@ -37,15 +37,17 @@
     let sent = document.getElementById("payload");
     let received = document.getElementById("received");
 
-    brokerBtn.addEventListener("click", function(){
+
+    brokerBtn.addEventListener("click", function() {
+
         const body = {
             method: 'POST',
         }
 
-        fetch("http:\/\/localhost:8081", body)
+        fetch("http:\/\/localhost:8080", body)
         .then((response) => response.json())
         .then((data) => {
-            sent.innerHTML= ("empty post request");
+            sent.innerHTML ="empty post request";
             received.innerHTML = JSON.stringify(data, undefined, 4);
             if (data.error) {
                 console.log(data.message);
@@ -54,8 +56,9 @@
             }
         })
         .catch((error) => {
-            output.innerHTML += "<br>Error: " + error;
+            output.innerHTML += "<br><br>Eror: " + error;
         })
-    })    
+    })
+        
     </script>
 {{end}}
