--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -6,7 +6,7 @@
             <div class="col">
                 <h1 class="mt-5">Test microservices</h1>
                 <hr>
-                <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test Broker</a>
+                <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
@@ -35,20 +35,20 @@
     let brokerBtn = document.getElementById("brokerBtn");
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
-    let received = document.getElementById("received");
-
+    let recevied = document.getElementById("received");
 
     brokerBtn.addEventListener("click", function() {
 
         const body = {
             method: 'POST',
+            headers: {'Content-Type': 'application/json'},  
         }
 
-        fetch("http:\/\/localhost:8080", body)
+        fetch("http:\/\/localhost:8081", body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML ="empty post request";
-            received.innerHTML = JSON.stringify(data, undefined, 4);
+            recevied.innerHTML = JSON.stringify(data, undefined, 4);
             if (data.error) {
                 console.log(data.message);
             } else {
